Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115201

Missing <QtGui/QWindow> include in gui/kernel/qplatformwindow_p.h

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • None
    • 6.5, dev
    • GUI: Other
    • None
    • fa0d60b1ff5a9e9086644aa660b1c38053c5fd5f

    Description

      gui/kernel/qplatformwindow_p.h contains references to QWindow but does not include <QtGui/QWindow>.

      These QWindow references end up in moc_qplatformwindow_p.cpp which cannot be compiled on its own due to no QWindow declaration being in scope. This is masked because one of the other files included earlier in QtGui's mocs_compilation.cpp (presumably moc_qplatformservices.cpp) includes <QtGui/QWindow>.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            francoisk777 Francois Kritzinger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes