libQt6Gui: apply patches to downstream copies

- qplatformwindow_p.h

   [Upstream issue: https://bugreports.qt.io/browse/QTBUG-115201]

   This header contains references to QWindow that end up in
   moc_qplatformwindow_p.cpp which then fails to compile. This doesn't happen
   upstream because cmake compiles moc outputs in a mini unity build and one
   of the other files coincidentally pull in <QWindow>.

   Fix for our case by including <QWindow> from qplatformwindow_p.h which is
   included by moc_qplatformwindow_p.cpp.